workloadsdir=$(datadir)/filebench/workloads

workloads_DATA = bringover.f \
	compflow_demo.f \
	copyfiles.f \
	createfiles.f \
	deletefiles.f \
	filemicro_create.f \
	filemicro_createfiles.f \
	filemicro_createrand.f \
	filemicro_delete.f \
	filemicro_rread.f \
	filemicro_rwritedsync.f \
	filemicro_rwrite.f \
	filemicro_rwritefsync.f \
	filemicro_seqread.f \
	filemicro_seqwrite.f \
	filemicro_seqwriterand.f \
	filemicro_seqwriterandvargam.f \
	filemicro_seqwriterandvartab.f \
	filemicro_statfile.f \
	filemicro_writefsync.f \
	fileserver.f \
	listdirs.f \
	makedirs.f \
	mongo.f \
	multistreamreaddirect.f \
	multistreamread.f \
	multistreamwritedirect.f \
	multistreamwrite.f \
	netsfs.f \
	networkfs.f \
	oltp.f \
	openfiles.f \
	postmark.f \
	randomfileaccess.f \
	randomread.f \
	randomrw.f \
	randomwrite.f \
	ratelimcopyfiles.f \
	removedirs.f \
	singlestreamreaddirect.f \
	singlestreamread.f \
	singlestreamwritedirect.f \
	singlestreamwrite.f \
	tpcso.f \
	varmail.f \
	videoserver.f \
	webproxy.f \
	webserver.f


EXTRA_DIST = $(workloads_DATA)
